Fix font flickering

--- a/src/public/index.css
+++ b/src/public/index.css
@@ -1,9 +1,8 @@
 * {
     box-sizing: border-box;
     font-family: 'Spectral SC', sans-serif;
+    font-display: optional;
 }
-
-.wf-loading * { opacity: 0; }
 
 body {
     color: #000;
